objects/Business_Objectives__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>Potential Risk</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Risk/Roadblock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Priority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Success Priority</label>
        <referenceTo>Success_Priority__c</referenceTo>
        <relationshipLabel>Business Objectives</relationshipLabel>
        <relationshipName>Business_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Used for C360 Customer Success Program</description>
    <label>Business Objectives</label>
    <nameField>
        <label>Business Objectives Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>